# xfce4-power-manager

./: .clang-format  .cppcheck-false-positives  .gitignore  .scan-build-false-positives  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  configure.ac.in  meson.build  meson_options.txt  module.xml
common/: Makefile.am  meson.build  xfpm-brightness-polkit.c  xfpm-brightness-polkit.h  xfpm-brightness-x11.c  xfpm-brightness-x11.h  xfpm-brightness.c  xfpm-brightness.h  xfpm-common.c  xfpm-common.h  xfpm-config.h  xfpm-debug.c  xfpm-debug.h  xfpm-enum-glib.h  xfpm-enum.h  xfpm-icons.h  xfpm-notify.c  xfpm-notify.h  xfpm-power-common.c  xfpm-power-common.h  xfpm-ppd-common.c  xfpm-ppd-common.h
data/: Makefile.am  meson.build
data/appdata/: Makefile.am  xfce4-power-manager.appdata.xml.in
data/icons/: Makefile.am
data/icons/128x128/: Makefile.am
data/icons/128x128/devices/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/16x16/actions/: Makefile.am
data/icons/16x16/status/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/22x22/actions/: Makefile.am
data/icons/22x22/status/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/24x24/actions/: Makefile.am
data/icons/24x24/status/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/32x32/status/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/48x48/actions/: Makefile.am
data/icons/48x48/status/: Makefile.am
data/icons/64x64/: Makefile.am
data/icons/96x96/: Makefile.am
data/icons/scalable/: Makefile.am
data/icons/scalable/actions/: Makefile.am
data/icons/scalable/apps/: Makefile.am
data/icons/scalable/status/: Makefile.am
data/interfaces/: Makefile.am  meson.build  xfpm-settings.ui  xfpm.gresource.xml
doc/: Makefile.am
doc/C/: Makefile.am  xfce4-power-manager.html  xfce4-power-manager.xml  xfce4-power-manager.xml.in
doc/C/images/: Makefile.am
libdbus/: Makefile.am  meson.build  org.xfce.unique.xml  xfpm-dbus-marshal.list  xfpm-dbus-monitor.c  xfpm-dbus-monitor.h  xfpm-dbus.c  xfpm-dbus.h  xfpm-unique.c  xfpm-unique.h
libhal/: Makefile.am  hal-device.h  hal-manager.c  hal-manager.h  hal-marshal.list
libxfpm/: Makefile.am  dbus-hal.c  dbus-hal.h  hal-battery.c  hal-battery.h  hal-ctx.c  hal-ctx.h  hal-device.c  hal-device.h  hal-enum.h  hal-iface.c  hal-iface.h  hal-manager.c  hal-manager.h  hal-marshal.c  hal-marshal.h  hal-marshal.list  hal-monitor.c  hal-monitor.h  hal-power.c  hal-power.h  hal-proxy.c  hal-proxy.h  xfpm-common.c  xfpm-common.h  xfpm-dbus.c  xfpm-dbus.h  xfpm-icons.h  xfpm-notify.c  xfpm-notify.h  xfpm-popups.c  xfpm-popups.h  xfpm-string.c  xfpm-string.h
panel-plugin/: Makefile.am  meson.build  power-manager-button.c  power-manager-button.h  power-manager-config.c  power-manager-dialog.c  power-manager-dialog.h  power-manager-plugin.c  power-manager-plugin.h  scalemenuitem.c  scalemenuitem.h
panel-plugins/: Makefile.am
panel-plugins/battery/: Makefile.am  battery-button.c  battery-button.h  battery-plugin.c  scalemenuitem.c  xfce4-battery-plugin.desktop.in.in
panel-plugins/battery/lxde/: Makefile.am  battery-plugin.c
panel-plugins/battery/xfce/: Makefile.am  battery-plugin.c
panel-plugins/brightness/: Makefile.am  brightness-button.c  brightness-button.h  brightness-plugin.c  brightness-proxy.c  brightness-proxy.h  main.c  xfce4-brightness-plugin.desktop.in.in
panel-plugins/inhibit/: Makefile.am  inhibit-plugin.c  xfce4-inhibit-plugin.desktop.in.in
panel-plugins/power-manager-plugin/: Makefile.am  power-manager-button.c  power-manager-button.h  power-manager-config.c  power-manager-config.h  power-manager-dialog.c  power-manager-dialog.h  power-manager-plugin.c  power-manager-plugin.desktop.in.in  power-manager-plugin.h  scalemenuitem.c  scalemenuitem.h
panel-plugins/power-manager-plugin/lxde/: lxde-power-manager-plugin.c
panel-plugins/power-manager-plugin/lxde-0.7/: Makefile.am  lxde-power-manager-plugin.c
panel-plugins/power-manager-plugin/xfce/: Makefile.am  power-manager-plugin.desktop.in.in  xfce-power-manager-plugin.c
po/: .intltool-merge-cache  ChangeLog  LINGUAS  Makefile  POTFILES  POTFILES.in  am.po  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  kn.po  ko.po  lo.po  (+33 more)
protocols/: Makefile.am  meson.build
settings/: Makefile.am  meson.build  xfce4-power-manager-settings.1  xfce4-power-manager-settings.desktop.in  xfpm-settings-app.c  xfpm-settings-app.h  xfpm-settings-main.c  xfpm-settings.c  xfpm-settings.glade  xfpm-settings.h
src/: Makefile.am  egg-idletime.c  egg-idletime.h  gsd-media-keys-window.c  meson.build  org.freedesktop.PowerManagement.Backlight.xml  org.freedesktop.PowerManagement.Inhibit.xml  org.freedesktop.PowerManagement.xml  org.xfce.Power.Manager.xml  org.xfce.power.policy.in.in  org.xfce.power.policy.in2  xfce-screensaver.c  xfce-screensaver.h  xfce4-power-manager.1  xfce4-power-manager.desktop.in  xfpm-ac-adapter.c  xfpm-ac-adapter.h  xfpm-adapter.c  xfpm-adapter.h  xfpm-backlight-helper.c  xfpm-backlight.c  xfpm-backlight.h  xfpm-battery-icon.c  xfpm-battery-icon.h  xfpm-battery-info.c  xfpm-battery-info.h  xfpm-battery.c  xfpm-battery.h  xfpm-brightness-hal.c  xfpm-brightness-hal.h  xfpm-brightness-widget.c  xfpm-brightness-widget.h  xfpm-button-hal.c  xfpm-button-hal.h  xfpm-button-xf86.c  xfpm-button-xf86.h  xfpm-button.c  xfpm-button.h  xfpm-common.c  xfpm-common.h  (+99 more)
