option(
  'x11',
  type: 'feature',
  value: 'auto',
  description: 'Support for the X11 windowing system',
)

option(
  'wayland',
  type: 'feature',
  value: 'auto',
  description: 'Support for the Wayland windowing system',
)

option(
  'panel-plugin',
  type: 'feature',
  value: 'auto',
  description: 'Build plugin for xfce4-panel',
)

option(
  'polkit',
  type: 'feature',
  value: 'auto',
  description: 'Polkit support',
)

option(
  'host-os',
  type: 'string',
  value: '',
  description: 'Host operating system to use: linux, freebsd, openbsd or solaris (default: autodetected build os)',
)
